--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -18,7 +18,7 @@ const showcaseSrc = getImgSrc(showcaseVideo);
     >
   </p>
 </div>
-<my-computer id="videos" class="dark:bg-gray-900 sm:px-6 px-2">
+<my-computer id="videos" class="sm:px-6 px-2">
   <div data-container class="py-8 max-w-prose mx-auto grid relative">
     <img
       data-glow
