--- a/src/components/iBen/CdDrive.astro
+++ b/src/components/iBen/CdDrive.astro
@@ -28,7 +28,7 @@
     transform-origin: center 20%;
     scale: 1.15;
     filter: brightness(0.9);
-    box-shadow: 5em 5em 30em theme(colors.slate.800);
+    box-shadow: 5em 5em 30em var(--color-slate-800);
   }
 
   [data-eject-btn-outer] {
@@ -48,7 +48,7 @@
     to {
       scale: 1;
       filter: brightness(1);
-      box-shadow: 5em 5em 10em theme(colors.slate.800);
+      box-shadow: 5em 5em 10em var(--color-slate-800);
     }
   }
 
