--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -15,7 +15,7 @@ const { Content, headings } = await post.render();
 
 <BaseLayout {headings}>
   <article-scroll>
-    <main class="max-w-prose m-auto px-3 prose dark:prose-invert">
+    <main class="max-w-prose m-auto px-3 prose prose-invert">
       <h1>{post.data.title}</h1>
       <Content />
     </main>
