--- a/src/layouts/tailwind.css
+++ b/src/layouts/tailwind.css
@@ -24,4 +24,8 @@
   --font-size-3xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
   --font-size-4xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
   --font-size-5xl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+
+  --color-marker-red: #ff0000;
+  --color-marker-blue: #0034ff;
+  --color-marker-green: var(--color-green-600);
 }
