--- a/src/layouts/tailwind.css
+++ b/src/layouts/tailwind.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 
 @theme {
+  /* Default theme: https://github.com/tailwindlabs/tailwindcss/blob/next/packages/tailwindcss/theme.css */
   --font-family-heading: "Ranga", system-ui, -apple-system, BlinkMacSystemFont,
   "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
   "Helvetica Neue", sans-serif;
