chore: remove prose classes

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -15,7 +15,7 @@ const { Content, headings } = await post.render();
 
 <BaseLayout {headings}>
   <article-scroll>
-    <main class="max-w-prose m-auto px-3 prose prose-invert mb-24">
+    <main class="max-w-prose m-auto px-3 mb-24">
       <h1 class="text-4xl mt-12">{post.data.title}</h1>
       <Content />
     </main>
