--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -78,7 +78,7 @@ const links: ListItem[] = [
   import { toAttr } from "../utils.client";
 
   @controller
-  export class NavOpenElement extends HTMLElement {
+  class NavOpenElement extends HTMLElement {
     @attr open = true;
     @target btn!: HTMLButtonElement;
     @targets links!: HTMLAnchorElement[];
