--- a/src/components/TOC.astro
+++ b/src/components/TOC.astro
@@ -56,7 +56,7 @@ const { headings } = Astro.props;
   import { toAttr } from "../utils.client";
 
   @controller
-  export class MyTocElement extends HTMLElement {
+  class MyTocElement extends HTMLElement {
     @attr open = false;
     @attr doneReading = false;
     @target declare btn: HTMLButtonElement;
